--- a/style.css
+++ b/style.css
@@ -1,22 +1,31 @@
 body {
-    display: flex;
-    min-height: 100vh;
-    max-height: 100vh;
-    flex-direction: column;
+	display: flex;
+	min-height: 100vh;
+	max-height: 100vh;
+	flex-direction: column;
 }
 
 main {
-    flex: 1 0 auto;
-    overflow-y: auto;
-    max-height: calc(100vh - 134px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	flex: 1 0 auto;
+	overflow-y: auto;
+	max-height: calc(100vh - 134px);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 @media only screen and (min-width: 993px) {
-    .container {
-        width: 85%;
-    }
+	.container {
+		width: 85%;
+	}
+}
+
+#thumbnails {
+	display: flex;
+	flex-flow: row wrap;
+	max-width: 317px;
+	min-width: 300px;
+	max-height: 50vh;
+	overflow-y: scroll;
 }
